--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing:border-box;
+}
+    
 .header {
     background-color: #1f2937;
     color: white;
